# ccc-rust

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  agents.md  docker-compose.yml  todo.md
.devcontainer/: devcontainer.json
.github/: refactor.instruct.md
.github/workflows/: ci.yml  release.yml
examples/: test_endpoints.sh  usage_example.rs
src/: agent.rs  claude.rs  lib.rs  main.rs  mcp_adapter.rs  mcp_server.rs
src/workflows/: mod.rs
