[package]
name = "rust-web-router"
version = "0.1.0"
edition = "2021"
authors = ["eyshoit-commits"]
description = "Rust Web Framework - Modern web router with MCP integration"
license = "MIT"

[lib]
name = "rust_web_router"
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
env_logger = "0.11"

[dev-dependencies]
actix-web = { version = "4", features = ["macros"] }

[[bin]]
name = "rust-web-router"
path = "src/main.rs"

[[example]]
name = "usage_example"
path = "examples/usage_example.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
